web-infras/parser/tests/fixtures/esprima/ES6/program/script/invalid-import-declaration/output.txt
[SyntaxError]: 'import' and 'export' may appear only with 'sourceType: "module"' (1,1)
1|import foo from "foo";
 |^
